[package]
name = "sarge"
version = "6.0.0"
edition = "2021"

authors = ["Kyllingene"]
description = "Zero-dependencies arguments parser."
repository = "https://github.com/kyllingene/sarge"

license = "MIT"

keywords = ["cli", "argparse", "command-line"]
categories = ["command-line-interface", ]

[dependencies]
# DO NOT add any dependencies!

[features]
default = ["macros"]
macros = []
