[package]
name = "sarge"
version = "7.2.5"
edition = "2021"

authors = ["Kyllingene"]
description = "Zero-dependencies arguments parser."
repository = "https://github.com/kyllingene/sarge"

license = "MIT"

keywords = ["cli", "argparse", "command-line"]
categories = ["command-line-interface", ]

[dependencies]
# DO NOT add any dependencies!

[features]
default = ["help", "macros"]
help = []
macros = []

[[example]]
name = "help"
required-features = ["help"]

[[example]]
name = "macros"
required-features = ["help"]

